--- a/conf/modsec/main.conf
+++ b/conf/modsec/main.conf
@@ -1,3 +1,4 @@
 Include "/etc/nginx/modsec/modsecurity.conf"
+Include "/etc/nginx/modsec/clamav.conf"
 Include "/usr/local/owasp-modsecurity-crs/crs-setup.conf"
 Include "/usr/local/owasp-modsecurity-crs/rules/*.conf"
